[package]
name = "adjustable-bid-encoding-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = "1.3"
bytes = "1.6"

[dependencies.adjustable-bid-encoding-rs]
path = ".."
features = ["ssz", "testing"]

[[bin]]
name = "fuzz_ssz_adjustment_data"
path = "fuzz_targets/fuzz_ssz_adjustment_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ssz_deneb_request"
path = "fuzz_targets/fuzz_ssz_deneb_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ssz_electra_request"
path = "fuzz_targets/fuzz_ssz_electra_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_invariant_validation"
path = "fuzz_targets/fuzz_invariant_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merkle_proofs"
path = "fuzz_targets/fuzz_merkle_proofs.rs"
test = false
doc = false
bench = false
